# librsync

./: CMakeLists.txt  librsync.h
examples/: CMakeLists.txt
